--- a/SaintMichel/Platforms/Android/AndroidManifest.xml
+++ b/SaintMichel/Platforms/Android/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
   <application
       android:allowBackup="true"
-      android:icon="@mipmap/appicon"
+      android:icon="@mipmap/mdpi/IconeSaintMichel"
       android:usesCleartextTraffic="true"
       android:supportsRtl="true">
     <!-- Other configurations -->
