--- a/SaintMichel/Platforms/Android/AndroidManifest.xml
+++ b/SaintMichel/Platforms/Android/AndroidManifest.xml
@@ -1,15 +1,9 @@
-﻿<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.companyname.saintmichel">
-
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-  <application
-      android:allowBackup="true"
-      android:icon="@mipmap/mdpi/IconeSaintMichel"
-      android:usesCleartextTraffic="true"
-      android:supportsRtl="true">
-    <!-- Other configurations -->
-  </application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.saintmichel">
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<application android:allowBackup="true" android:usesCleartextTraffic="true" android:supportsRtl="true">
+		<!-- Other configurations -->
+	</application>
 </manifest>
